[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/player/shadow.png" type="Texture" id=1]
[ext_resource path="res://assets/art/player/hobo_fall.png" type="Texture" id=2]
[ext_resource path="res://src/player/FallingShadow.gd" type="Script" id=3]
[ext_resource path="res://assets/art/enemies/dust.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/land.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/fall.ogg" type="AudioStream" id=6]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.56872, 0.763033 )
colors = PoolColorArray( 0.83667, 0.83667, 0.83667, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 30, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -120.0
scale = 3.0
scale_random = 0.2
color_ramp = SubResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1, 1 ) ]
}

[node name="FallingShadow" type="Node2D"]
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0.0705882, 0.0705882, 0.0705882, 0.937255 )
scale = Vector2( 3, 3 )
z_index = -1
texture = ExtResource( 1 )

[node name="Player" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )

[node name="DustParticles" type="Particles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
process_material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="Anims" type="AnimationPlayer" parent="."]
playback_speed = 0.7
anims/shrink = SubResource( 4 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[node name="Fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Crash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[connection signal="timeout" from="StartTimer" to="." method="_start_falling"]
[connection signal="timeout" from="EndTimer" to="." method="_animation_over"]
